--- a/web/css/sub-content.css
+++ b/web/css/sub-content.css
@@ -85,6 +85,12 @@
 #content p {
 	padding: 0.5em 0;
 }
+#content p.releasedate { /* Changelog */
+	font-size: 110%;
+	font-style: italic;
+	color: rgb(160, 64, 139);
+}
+
 /* ------------------------------------------ span --- */
 #content span.existscloset:hover {
 	border-bottom: solid 1px #ccc;
@@ -442,7 +448,7 @@
 	margin-top: 30px;
 }
 
-#content div.release li {
+#content div.release li { /* Changelog */
 	font-size: 80%;
 }
 
